[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/combat/CombatArena.gd" type="Script" id=1]
[ext_resource path="res://src/combat/turn_queue/TurnQueue.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/combat/interface/CombatInterface.gd" type="Script" id=3]
[ext_resource path="res://src/combat/interface/PopupLabelBuilder.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/combat/interface/SelectArrow.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/combat/interface/bars/BattlersBarsBuilder.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/combat/interface/turn_order/TurnOrder.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/combat/Rewards.gd" type="Script" id=8]
[ext_resource path="res://assets/theme/default.theme" type="Theme" id=9]
[ext_resource path="res://src/combat/background/Grasslands.tscn" type="PackedScene" id=10]




[node name="CombatArena" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnPositions" type="Node" parent="."]
editor/display_folded = true

[node name="Monsters" type="Node" parent="SpawnPositions"]

[node name="Party" type="Node" parent="SpawnPositions"]

[node name="1" type="Position2D" parent="SpawnPositions/Party"]
position = Vector2( 1312, 586 )

[node name="2" type="Position2D" parent="SpawnPositions/Party"]
position = Vector2( 1536, 768 )

[node name="TurnQueue" parent="." instance=ExtResource( 2 )]
z_index = 10

[node name="CombatInterface" type="CanvasLayer" parent="." groups=[
"interface",
]]
editor/display_folded = true
script = ExtResource( 3 )

[node name="PopUpHandler" parent="CombatInterface" instance=ExtResource( 4 )]

[node name="SelectArrow" parent="CombatInterface" instance=ExtResource( 5 )]

[node name="BattlersBarsBuilder" parent="CombatInterface" instance=ExtResource( 6 )]

[node name="TurnOrder" parent="CombatInterface" instance=ExtResource( 7 )]

[node name="Rewards" type="CanvasLayer" parent="."]
editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 8 )

[node name="Panel" type="Panel" parent="Rewards"]
anchor_right = 1.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 160 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 9 )

[node name="Label" type="Label" parent="Rewards/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "EXP Earned"
align = 1
valign = 1

[node name="Grasslands" parent="." instance=ExtResource( 10 )]

